Fix padding on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -166,3 +166,7 @@ body {
 .no-padding{
     padding: 0;
 }
+
+.form-control {
+   font-size: 16px;
+}
